# simplefin

./: Cargo.toml  README.md  README_TEMPLATE.md
.github/workflows/: ci.yml
src/: account.rs  accountset.rs  connection.rs  error.rs  lib.rs  transaction.rs
